# occurences-prociv

./: .gitignore  Cargo.toml  Dockerfile.prod  README.md  build.rs
.github/workflows/: build_and_push.yml  check_protos.yml  push_to_main.yml
protos/occurrence/v1/: occurrence_status.proto
src/: lib.rs  main.rs  model.rs
src/json_api/: mod.rs
src/json_api/models/: mod.rs  occurrence_kind.rs
src/occurrences/: mod.rs
src/occurrences/convert/: code_map.rs  mod.rs
