[package]
name = "occurences-prociv"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]
resolver = "2"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-stream = "0.3.5"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
mongodb = "3.1.0"
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = { version = "0.12.7", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
    "stream",
    "multipart",
    "json",
] }
sentry = { version = "0.34.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "anyhow",
    "debug-images",
    "reqwest",
    "rustls",
] }
sentry-tracing = "0.34.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"
serde_repr = "0.1.19"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
macros = { version = "0.1.0", path = "macros" }

[build-dependencies]
anyhow = "1.0.89"
protox = "0.7.1"
tempfile = "3.12.0"
tonic-build = "0.12.3"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
panic = "abort"
strip = true
